# preparation

./: .gitignore  README.md  pyproject.toml
algorithm/: clone_graph.py  course_schedule.py  insert_interval.py  k_closet.py
algorithm/matrix/: 01_matrix.py
algorithm/stack/: longest_valid_parenthesis.py
algorithm/subarray/: maximum_subarray.py
algorithm/trie/: implement_trie.py
data-science/machine-learning/deep-learning/gen-ai/projects/chatapp/: server.py
data-science/machine-learning/deep-learning/gen-ai/projects/tts-with-openai-whisper/: tts_with_gradio.py
data-science/machine-learning/deep-learning/gen-ai/tools/chatapp/: worker.py
data-science/machine-learning/jupyter-notebooks/data-analysis/data-import/: data-import.ipynb
data-science/machine-learning/jupyter-notebooks/data-analysis/data-wrangling/: data-wrangling.ipynb
iac/terraform/variables/: main.tf
jupyter-notebooks/data-analysis/classification/: KNN-lab-v1.ipynb  Multi-class_Classification.ipynb
jupyter-notebooks/data-analysis/data-wrangling/: Exploratory_data_analysis_cars.ipynb  data-wrangling.ipynb  exploratory_data_analysis.ipynb
jupyter-notebooks/data-analysis/model-creation-evaluation/: kde_plots.ipynb
jupyter-notebooks/data-analysis/regression/: Logistic_Regression.ipynb  Mulitple-Linear-Regression.ipynb  Simple-Linear-Regression.ipynb
jupyter-notebooks/dynamic-programming/: dp_patterns.ipynb
jupyter-notebooks/golang/: effective-go.ipynb
jupyter-notebooks/pyspark/hello-world-pyspark/: hello-world-pyspark.ipynb
practice/golang/: golang-practice.go
(+17 files in other folders)
