[project]
name = "preparation"
version = "0.1.0"
description = "The preparation project for algorithms and system design"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.19",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "gradio>=6.8.0",
    "huggingface-hub==0.36.0",
    "ipykernel>=7.2.0",
    "langchain==0.3.27",
    "langchain-community==0.3.31",
    "langchain-core==0.3.80",
    "langchain-huggingface==0.3.1",
    "langchain-ibm>=0.3.21",
    "langchain-text-splitters==0.3.11",
    "matplotlib>=3.10.8",
    "notebook>=7.5.4",
    "pyodide-http>=0.2.2",
    "pyspark>=3.5.0",
    "requests==2.32.5",
    "sentence-transformers==2.7.0",
    "torch>=2.10.0",
    "transformers>=4.46.0",
]
